<resources>
    <string name="app_name">Monday</string>
    <string name="hijau" />
    <string name="oren" />
    <string name="text" />
    <string name="coklat" />
    <string name="daun" />
    <string name="button" />
    <string name="name" />
    <string name="email" />
    <string name="password" />
    <string name="head" />
    <string name="line" />
    <string name="dateofbirth" />
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_listrestoran">listrestoran</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="historyorder">History Order</string>
    <string name="setting">Setting</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_restolist">restolist</string>
    <string name="monday">Monday Application</string>
    <string name="mondayapps">appmondaypbl4@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
</resources>