<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="413dp"
        android:layout_height="121dp"
        android:background="@drawable/hijauatas"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:background="@drawable/orenatas"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

    </LinearLayout>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="91dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="2dp"
        android:clickable="false"
        android:contentDescription="@string/text"
        android:fontFamily="sans-serif-black"
        android:freezesText="false"
        android:text="LOGIN"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="91dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="2dp"
        android:clickable="false"
        android:contentDescription="@string/text"
        android:fontFamily="sans-serif-black"
        android:freezesText="false"
        android:text="E-mail"
        android:textColor="#A6000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="91dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="2dp"
        android:clickable="false"
        android:contentDescription="@string/text"
        android:fontFamily="sans-serif-black"
        android:freezesText="false"
        android:text="Password"
        android:textColor="#A6000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534"
        tools:ignore="HardcodedText" />

    <ImageView
        android:layout_width="189dp"
        android:layout_height="283dp"
        android:layout_marginEnd="216dp"
        android:layout_marginRight="216dp"
        android:contentDescription="@string/daun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/daun" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399" />

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button"
        android:contentDescription="@string/button"
        android:fontFamily="sans-serif-medium"
        android:text="LOGIN"
        android:textColor="#000000"
        app:backgroundTint="#F9D99A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803"
        tools:ignore="HardcodedText" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891"
        app:srcCompat="@drawable/vector"
        tools:ignore="HardcodedText" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891"
        app:srcCompat="@drawable/vector"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editemail"
        android:layout_width="307dp"
        android:layout_height="44dp"
        android:contentDescription="@string/email"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435"
        tools:ignore="Autofill,LabelFor" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="310dp"
        android:layout_height="68dp"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61">

        <EditText
            android:id="@+id/editpassword"
            android:layout_width="307dp"
            android:layout_height="53dp"
            android:contentDescription="@string/email"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="Autofill,LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/text"
        android:fontFamily="sans-serif-black"
        android:text="TO CONTINUE"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="117dp"
        android:layout_height="23dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="2dp"
        android:clickable="false"
        android:fontFamily="sans-serif"
        android:freezesText="false"
        android:text="Not A Member?"
        android:textColor="#A6000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textsign"
        android:layout_width="117dp"
        android:layout_height="23dp"
        android:layout_marginLeft="183dp"
        android:layout_marginTop="2dp"
        android:clickable="true"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:freezesText="false"
        android:text="Sign Up Here"
        android:textColor="#A6000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="50dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="2dp"
        android:clickable="false"
        android:contentDescription="@string/text"
        android:fontFamily="sans-serif"
        android:freezesText="false"
        android:text="OR"
        android:textColor="#A6000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>